oxiplate/tests/broken/external-non-existent.stderr
error: proc-macro derive panicked
 --> tests/broken/external-non-existent.rs:3:10
  |
3 | #[derive(Oxiplate)]
  |          ^^^^^^^^
  |
  = help: message: Template path could not be canonicalized; Provided: external-non-existent.html.oxip

error[E0599]: no method named `render` found for struct `Data` in the current scope
 --> tests/broken/external-non-existent.rs:14:36
  |
 5 | struct Data {
   | ----------- method `render` not found for this struct
...
14 |     assert_eq!("Hello World", data.render().unwrap());
   |                                    ^^^^^^ method not found in `Data`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `render`, perhaps you need to implement it:
           candidate #1: `Render`
